# Autopyte

./: .gitignore  LICENSE  README.md  installer.json  pyproject.toml
autopyte/: __main__.py
src/autopyte/: __init__.py  client.py
src/weatherboy/: __init__.py  __main__.py  cli.py  client.py  models.py  service.py  utils.py
tests/: test_client.py
